src/components/IssueMenu.module.css
.overlay {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  z-index: 1000;
  opacity: 0;
  pointer-events: none;
  transition: all 0.3s ease-in-out;
}

.overlay.open {
  opacity: 1;
  pointer-events: all;
  background-color: rgba(0, 0, 0, 0.5);
}

.container {
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 30vw;
  transform: translateX(100%);
  transition: transform 0.3s ease-in-out;
  background-color: var(--white);
  z-index: 1001;
  overflow-y: scroll;
  padding: 0 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media screen and (max-width: 800px) {
  .container {
    width: 50vw;
  }
}

.title {
  text-align: center;
  margin: 1rem 0;
}

.info {
  text-align: center;
  opacity: 0.5;
  margin: 0;
  margin-bottom: 4px;
}

.container.open {
  transform: translateX(0);
}

.list {
  overflow-y: scroll;
  padding-bottom: 30px;
  box-sizing: border-box;
}

